--- a/nodeserver/src/client/css/Repository/RepositoryLogView.css
+++ b/nodeserver/src/client/css/Repository/RepositoryLogView.css
@@ -9,8 +9,8 @@
 }
 
 #repoDiag .item {
-    width: 30px;
-    height: 22px;
+    width: 8px;
+    height: 8px;
     color: #ffffff;
     background-color: #000000;
     vertical-align: middle;
@@ -26,6 +26,19 @@
     cursor: pointer;
 
     box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#repoDiag .item.merge {
+    border-radius: 0 !important;
+}
+
+#repoDiag .item:hover {
+    width: 12px;
+    height: 12px;
+    margin-left: -2px;
+    margin-top: -2px;
+    border-radius: 7px;
 }
 
 #repoDiag .item.actual {
