implementing commit details dialog and head labels with HTML templates

--- a/nodeserver/src/client/css/Repository/RepositoryLogView.css
+++ b/nodeserver/src/client/css/Repository/RepositoryLogView.css
@@ -73,3 +73,8 @@
 .local-head .tooltiplabel-inner {
     background-color: #3a87ad;
 }
+
+.commitHeadWrapper {
+    position: absolute;
+    white-space: nowrap;
+}
