--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -1,6 +1,11 @@
 /************** OVEERIDE BOOTSTRAP *******************/
 .popover {
     width: auto;
+    khtml-user-select: all;
+    -moz-user-select: all;
+    -webkit-user-select: all;
+    -o-user-select: all;
+    user-select: all;
 }
 
 /******************* tooltiplabel - BASED ON TOOLTIP BUT DOES NOT HAVE DIFFERENT Z-INDEX *****************/
