--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -8,6 +8,11 @@
     user-select: all;
 }
 
+/*.navbar-inner {
+    padding-left: 20px;
+    padding-right: 20px;
+}*/
+
 /******************* tooltiplabel - BASED ON TOOLTIP BUT DOES NOT HAVE DIFFERENT Z-INDEX *****************/
 
 .tooltiplabel {
