--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -3,6 +3,7 @@
 @import url("qtip/jquery.qtip.css");
 @import url("../design/css/jquery.gritter.css");
 @import url("jqueryui/jquery-ui-1.9.0.custom.css");
+@import url("Project/ProjectTitleView.css");
 /* OWN STYLES */
 html,body {
     margin: 0;
@@ -110,45 +111,11 @@ body {
 
 }
 
-.navbar-inner {
-    height:100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-color: #2c2c2c;
-    background-image: -moz-linear-gradient(top, #333333, #222222);
-    background-image: -ms-linear-gradient(top, #333333, #222222);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-    background-image: -webkit-linear-gradient(top, #333333, #222222);
-    background-image: -o-linear-gradient(top, #333333, #222222);
-    background-image: linear-gradient(top, #333333, #222222);
-    background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
-}
-
-.navbar-inner .brand {
-    float: left;
-    display: block;
-    padding: 8px 20px 12px;
-    margin-left: -20px;
-    font-size: 20px;
-    font-weight: 200;
-    line-height: 1;
-    color: #ffffff;
-}
-
-.navbar-inner .navbar-text {
-     line-height: 40px;
-}
-
-.navbar-inner .navbar-text .version {
-    line-height: 20px;
-}
-
 #contentContainer {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    padding-top: 41px;
+    padding-top: 40px;
 }
 
 #leftPane,
@@ -171,14 +138,6 @@ body {
     height: 100%;
     overflow: auto;
 }
-
-/*.pull-left {
-    float: left;
-}
-
-.pull-right {
-    float: right;
-}*/
 
 .sidePaneWidget {
     padding: 3px;
