--- a/nodeserver/src/client/css/DiagramDesigner/DefaultDecorator.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DefaultDecorator.css
@@ -34,5 +34,9 @@
     .default-decorator .connector.bottom {
       bottom: -6px; }
 
-.onhover .default-decorator {
-  background-color: #FF0000; }
+.selectable .default-decorator {
+  cursor: pointer; }
+
+.selected .default-decorator {
+  border: 2px solid #52a8ec;
+  background-color: #dbeafc; }
