--- a/nodeserver/src/client/scss/DiagramDesigner/DefaultDecorator.scss
+++ b/nodeserver/src/client/scss/DiagramDesigner/DefaultDecorator.scss
@@ -4,6 +4,8 @@ $min-width: 65px;
 $height: 40px;
 $border: 2px solid #000000;
 $background-color: #DEDEDE;
+$selected-background-color: #DBEAFC;
+$selected-border: 2px solid #52A8EC;
 
 .default-decorator {
   min-width: $min-width;
@@ -40,6 +42,15 @@ $background-color: #DEDEDE;
   }
 }
 
-.onhover .default-decorator {
-  background-color: #FF0000;
+.selectable {
+  .default-decorator {
+    cursor: pointer;
+  }
+}
+
+.selected {
+  .default-decorator {
+    border: $selected-border;
+    background-color: $selected-background-color;
+  }
 }
