--- a/nodeserver/src/client/css/DiagramDesigner/CircleDecorator.css
+++ b/nodeserver/src/client/css/DiagramDesigner/CircleDecorator.css
@@ -22,8 +22,7 @@
     width: 12px;
     position: absolute;
     cursor: pointer;
-    border: 1px solid blue;
-    display: none; }
+    border: 1px solid blue; }
     .circle-decorator .connector:hover {
       border-color: rgba(82, 168, 236, 0.8);
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
