DECORATORS beta commit
- experimenting with decorator and UI optimization
- add / update decorator of an item

--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -183,3 +183,12 @@ input[type="submit"].btn.btn-micro {
     border-top-color: #ffffff;
     border-bottom-color: #ffffff;
 }
+
+/**************** additional icons */
+.icon-progress {
+    background-image: url("../img/progress.gif");
+    width: 16px;
+    height: 16px;
+    margin-top: 0px;
+    background-position: 0px 0px;
+}
