--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -19,5 +19,14 @@
       background: rgba(219, 234, 252, 0.49);
       border: #52a8ec solid 1px;
       z-index: 100000; }
+    .designer-canvas .designer-canvas-body .items .selection-outline {
+      background: rgba(255, 255, 0, 0.1);
+      border: black dashed 1px;
+      position: absolute;
+      z-index: 1002;
+      pointer-events: none;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
+      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6); }
   .designer-canvas .designer-canvas-body .connections {
     position: absolute; }
