--- a/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
+++ b/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
@@ -1,6 +1,10 @@
 $designer-canvas-header-background-color: #EFEFEF;
 $designer-canvas-selection-rubber-band-background-color: rgba(219, 234, 252, 0.49);
 $designer-canvas-selection-rubber-band-border-color: #52A8EC;
+$designer-canvas-selection-outline-background-color: rgba(255, 255, 0, 0.1);
+$designer-canvas-selection-outline-border: #000000 dashed 1px;
+$designer-canvas-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
+$designer-canvas-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
 
 .designer-canvas {
 
@@ -33,6 +37,17 @@ $designer-canvas-selection-rubber-band-border-color: #52A8EC;
         background: $designer-canvas-selection-rubber-band-background-color;
         border: $designer-canvas-selection-rubber-band-border-color solid 1px;
         z-index: 100000;
+      }
+
+      .selection-outline {
+        background: $designer-canvas-selection-outline-background-color;
+        border: $designer-canvas-selection-outline-border;
+        position: absolute;
+        z-index: 1002;
+        pointer-events: none;
+        -webkit-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start 0 0 8px $designer-canvas-selection-outline-shadow-end;
+        -moz-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start, 0 0 8px $designer-canvas-selection-outline-shadow-end;
+        box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start, 0 0 8px $designer-canvas-selection-outline-shadow-end;
       }
     }
 
