--- a/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
+++ b/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
@@ -43,7 +43,7 @@ $designer-canvas-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
         background: $designer-canvas-selection-outline-background-color;
         border: $designer-canvas-selection-outline-border;
         position: absolute;
-        z-index: 1002;
+        /*z-index: 1002;*/
         pointer-events: none;
         -webkit-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start 0 0 8px $designer-canvas-selection-outline-shadow-end;
         -moz-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start, 0 0 8px $designer-canvas-selection-outline-shadow-end;
