introducing connection drawing manager

--- a/nodeserver/src/client/css/DiagramDesigner/CircleDecorator.css
+++ b/nodeserver/src/client/css/DiagramDesigner/CircleDecorator.css
@@ -28,6 +28,8 @@
       -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6); }
+    .circle-decorator .connector.connection-end-state-hover {
+      background-color: lime; }
     .circle-decorator .connector.top {
       top: -6px;
       left: 14px; }
