--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -14,6 +14,10 @@
     display: inline-block;
     margin-right: 10px;
     margin-left: 10px; }
+  .designer-canvas .designer-canvas-header .btn-group {
+    margin-left: 10px; }
+  .designer-canvas .designer-canvas-header .btn-group.no-margin {
+    margin-left: 0px; }
 .designer-canvas .designer-canvas-body {
   position: absolute;
   overflow: auto; }
