--- a/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
+++ b/nodeserver/src/client/scss/DiagramDesigner/DesignerCanvas.scss
@@ -5,6 +5,9 @@ $designer-canvas-selection-outline-background-color: rgba(255, 255, 0, 0.1);
 $designer-canvas-selection-outline-border: #000000 dashed 1px;
 $designer-canvas-selection-outline-shadow-start: rgba(0, 0, 0, 0.075);
 $designer-canvas-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
+$designer-canvas-selection-outline-s-btn-background-color: #FFFFFF;
+$designer-canvas-selection-outline-s-btn-shadow-start: rgba(0, 0, 0, 0.075);
+$designer-canvas-selection-outline-s-btn-shadow-end: rgba(0, 0, 0, 0.6);
 
 .designer-canvas {
 
@@ -64,6 +67,26 @@ $designer-canvas-selection-outline-shadow-end: rgba(0, 0, 0, 0.6);
         -webkit-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start 0 0 8px $designer-canvas-selection-outline-shadow-end;
         -moz-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start, 0 0 8px $designer-canvas-selection-outline-shadow-end;
         box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-shadow-start, 0 0 8px $designer-canvas-selection-outline-shadow-end;
+
+        .s-btn {
+          position: absolute;
+          /*z-index: 100000;*/
+          width: 26px;
+          height: 26px;
+          background-color: $designer-canvas-selection-outline-s-btn-background-color;
+          border-radius: 13px;
+          pointer-events: all;
+          cursor: pointer;
+          -webkit-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-s-btn-shadow-start 0 0 8px $designer-canvas-selection-outline-s-btn-shadow-end;
+          -moz-box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-s-btn-shadow-start, 0 0 8px $designer-canvas-selection-outline-s-btn-shadow-end;
+          box-shadow: inset 0 1px 1px $designer-canvas-selection-outline-s-btn-shadow-start, 0 0 8px $designer-canvas-selection-outline-s-btn-shadow-end;
+
+          &.delete {
+            top: -13px;
+            right: -13px;
+            background-image: url(../../img/remove.png);
+          }
+        }
       }
     }
 
