--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/CircleDecorator/CircleDecorator.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/CircleDecorator/CircleDecorator.scss
@@ -1,4 +1,4 @@
-@import "../../Connector";
+@import "../../../DiagramDesigner/Connector";
 
 $canvas-canvas-size: 40px; /* MAKE SURE TO ADJUST THE 'CANVAS_SIZE' ATTRIBUTE IN CIRCLEDECORATOR.JS */
 $selected-background-color: #DBEAFC;
