--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -1,3 +1,4 @@
+/* override default connector properties for draggable connector end */
 .designer-canvas .designer-canvas-header {
   padding: 5px;
   height: 30px;
@@ -54,5 +55,22 @@
           top: -13px;
           right: -13px;
           background-image: url(../../img/remove.png); }
+    .designer-canvas .designer-canvas-body .items .connectionDraggableEnd {
+      box-sizing: border-box;
+      background-color: #fefefe;
+      height: 12px;
+      width: 12px;
+      position: absolute;
+      cursor: pointer;
+      border: 1px solid #883333;
+      margin-top: -6px;
+      margin-left: -6px; }
+      .designer-canvas .designer-canvas-body .items .connectionDraggableEnd:hover {
+        border-color: rgba(255, 43, 43, 0.8);
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
+        -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 43, 43, 0.6); }
+      .designer-canvas .designer-canvas-body .items .connectionDraggableEnd.connection-end-state-hover {
+        background-color: lime; }
   .designer-canvas .designer-canvas-body .connections {
     position: absolute; }
