--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/Port.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/Port.scss
@@ -10,6 +10,13 @@ $dot-color: #666666;
     cursor: pointer;
   }
 
+  .title-wrapper {
+    display: inline-block;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   span.dot {
     display: inline-block;
     width: 3px;
