--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
@@ -29,6 +29,9 @@ $ports-separator-width: 15px;
     font-weight: bold;
     text-transform: uppercase;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: $ports-width * 2 + $ports-separator-width;
   }
 
   .ports {
