--- a/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
+++ b/nodeserver/src/client/scss/ModelEditor3/Decorators/DecoratorWithPorts/DecoratorWithPorts.scss
@@ -91,13 +91,13 @@ $ports-separator-width: 15px;
 }
 
 .selectable {
-  .default-decorator {
+  .decorator-with-ports {
     cursor: pointer;
   }
 }
 
 .selected {
-  .default-decorator {
+  .decorator-with-ports {
     border: $selected-border;
     background-color: $selected-background-color;
   }
