--- a/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
+++ b/nodeserver/src/client/css/DiagramDesigner/DesignerCanvas.css
@@ -2,7 +2,9 @@
 .designer-canvas .designer-canvas-header {
   padding: 5px;
   height: 30px;
-  background-color: #efefef; }
+  background-color: #efefef;
+  overflow: hidden;
+  white-space: nowrap; }
   .designer-canvas .designer-canvas-header .designer-canvas-header-title {
     font-size: 20px;
     font-weight: bold;
@@ -23,7 +25,7 @@
   position: absolute;
   overflow: auto; }
   .designer-canvas .designer-canvas-body.read-only {
-    background-color: #aaaaaa; }
+    background-color: #ededed; }
   .designer-canvas .designer-canvas-body .items {
     position: absolute; }
     .designer-canvas .designer-canvas-body .items:focus {
