--- a/nodeserver/src/client/css/ModelEditor3/Decorators/DefaultDecorator/DefaultDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor3/Decorators/DefaultDecorator/DefaultDecorator.css
@@ -4,8 +4,7 @@
   border: 2px solid black;
   background-color: #dedede;
   padding: 3px;
-  text-align: center;
-  position: absolute; }
+  text-align: center; }
   .default-decorator .name {
     margin-top: 10px;
     white-space: nowrap;
