--- a/nodeserver/src/client/css/PartBrowser/PartBrowserView.css
+++ b/nodeserver/src/client/css/PartBrowser/PartBrowserView.css
@@ -1,27 +1,20 @@
 .partBrowser {
-    text-align: center;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100%;
-}
-
-.partBrowser ul {
+  text-align: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  width: 100%; }
+  .partBrowser ul {
     list-style-type: none;
     margin: 0;
     white-space: nowrap;
-    padding: 0;
-}
-
-.partBrowser ul li {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px 10px 5px 10px;
-    text-decoration: none;
-    color: black;
-    font-size: 10px;
-}
-
-.partBrowser ul li div.part {
-    display: inline-block;
-    cursor: pointer;
-}
+    padding: 0; }
+    .partBrowser ul li {
+      list-style-type: none;
+      padding: 0px;
+      margin: 15px 10px 5px 10px;
+      text-decoration: none;
+      color: black;
+      font-size: 10px; }
+      .partBrowser ul li div.part {
+        display: inline-block;
+        cursor: pointer; }
