new class for setting cursor to pointer on element hover

--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -193,3 +193,8 @@ input[type="submit"].btn.btn-micro {
     background-position: 0px 0px;
 }
 
+/************** pointer on hover ******************/
+.pointer:hover {
+    cursor: pointer;
+}
+
